--- a/pango/PKGBUILD
+++ b/pango/PKGBUILD
@@ -4,31 +4,36 @@
 
 pkgbase=pango
 pkgname=(pango pango-docs)
-pkgver=1.48.10
+pkgver=1.50.3
 pkgrel=1
 epoch=1
 pkgdesc="A library for layout and rendering of text"
 url="https://www.pango.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
-depends=(libthai libxft harfbuzz fribidi)
+depends=(libthai cairo libxft harfbuzz fribidi)
 makedepends=(gobject-introspection help2man git meson gi-docgen)
-checkdepends=(ttf-dejavu cantarell-fonts noto-fonts noto-fonts-emoji)
-_commit=dc5bde2a20cbb025c9d0ed29ed687740a4d027da  # tags/1.48.10^0
-source=("git+https://gitlab.gnome.org/GNOME/pango.git#commit=$_commit")
-sha256sums=('SKIP')
+checkdepends=(ttf-dejavu cantarell-fonts)
+_commit=26aadb2508f9022cbfc72e73b558c6791f5d46d9  # tags/1.50.3^0
+source=("git+https://gitlab.gnome.org/GNOME/pango.git#commit=$_commit"
+        fix-test.diff)
+sha256sums=('SKIP'
+            'c4ad17910d51832ca15d5805e5b43af4c3de4de51cbf1880e616e12dc664895f')
 
 pkgver() {
   cd pango
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
   cd pango
+
+  # Fix tests... seems to be a rounding error
+  git apply -3 ../fix-test.diff
 }
 
 build() {
-  arch-meson pango build -D gtk_doc=true -D cairo=disabled
+  arch-meson pango build -D gtk_doc=true
   meson compile -C build
 }
 
